Add Firebase Hosting redirect rules

--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,20 @@
 {
   "hosting": {
     "public": ".",
+    "cleanUrls": true,
+    "trailingSlash": false,
     "ignore": [
       "firebase.json",
       "**/.*"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    "redirects": [{
+      "source": "/*",
+      "destination": "/",
+      "type": 301
+    }],
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
   }
 }
